# smartweatherstation

./: .gitignore  CMakeLists.txt  README.md  WeatherSettings
doc/: Doxyfile
simulators/: register.sh  simulateIndoorSensors.sh
src/: CMakeLists.txt  environmentinitializer.cpp  environmentinitializer.h  main.cpp
src/core/: datetimesettings.cpp  datetimesettings.h  environmentinitializer.cpp  environmentinitializer.h
src/qml/: Colors.qml  Constants.qml  MainScreenContent.qml  SwitchableBlur.qml  TemperatureHelper.qml  main.qml  qml.qrc  qmldir
src/qml/components/: SWSCombobox.qml  SWSRadioDelegate.qml  SWSText.qml  SWSTextField.qml
src/qml/images/: images.qrc
src/qml/settingsMenus/: GeneralWeatherSettings.qml  MenuSelector.qml  SensorsSettings.qml  SettingsMenu.qml  SettingsMenuContainer.qml  TemperatureSettings.qml
src/qml/settingsMenus/weatherAPISettings/: OpenWeatherMapAPISettings.qml
src/qml/weatherView/: MainScreenContent.qml  RegisterRoomPopup.qml
src/qml/weatherView/blocks/: Block.qml  DatetimeBlock.qml  IndoorWeatherBlock.qml  IndoorWeatherDelegate.qml  OutdoorWeatherBlock.qml
src/simulator/: main.cpp  scriptlauncher.cpp  scriptlauncher.h
src/simulator/qml/: SimulatorItem.qml  main_simulator.qml  main_simulator.qml.dsSNbU  qml_simulator.qrc
src/simulator/scripts/: register.sh  send_temperature.sh  simulateIndoorSensors_random.sh
src/utils/: temperatureconverter.cpp  temperatureconverter.h
src/utils/data/: countrylist.json
src/utils/location/: countrylistmodel.cpp  countrylistmodel.h  locationfinder.cpp  locationfinder.h  locationlistmodel.cpp  locationlistmodel.h
src/utils/models/SortFilterProxyModel/: qqmlsortfilterproxymodel.cpp  qqmlsortfilterproxymodel.h
src/weather/: abstractweatherapiaccess.cpp  abstractweatherapiaccess.h  indoorweatherdata.cpp  indoorweatherdata.h  openweathermapaccess.cpp  openweathermapaccess.h  room.cpp  room.h  sensorsdatasubscriber.cpp  sensorsdatasubscriber.h  weather.cpp  weather.h  weatherdata.cpp  weatherdata.h  weatherdatajsonkeys.h  weathersettings.cpp  weathersettings.h
src/weather/messages/: message.cpp  message.h  messageprocessor.cpp  messageprocessor.h
src/weather/messages/operators/: messageoperator.cpp  messageoperator.h  registermessageoperator.cpp  registermessageoperator.h  temperaturemessageoperator.cpp  temperaturemessageoperator.h
src/weather/settings/: settingsgroup.cpp  settingsgroup.h  temperaturesettingsgroup.cpp  temperaturesettingsgroup.h  weathersettings.cpp  weathersettings.h
src/weather/settings/settingsgroup/: generalweathersettingsgroup.cpp  generalweathersettingsgroup.h  openweathermapapisettingsgroup.cpp  openweathermapapisettingsgroup.h  settingsgroup.cpp  settingsgroup.h  temperaturesettingsgroup.cpp  weathersettingsgroup.cpp  weathersettingsgroup.h
tests/: CMakeLists.txt  tst_openweathermapapi.cpp  tst_weathersettings.cpp
